# project-commuter

./: .gitignore  .replit  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  api_server.py  dashboard.py  launcher.py  main.py  nodriver_elem.json  nodriver_methods.json  pyproject.toml  python launcher.py  render.yaml  replit.md  requirements.txt  server.py
agents/: __init__.py  brain_squad.py  ops_agent.py  ops_squad.py  orchestrator.py  root_agent.py  scout_agent.py  scout_squad.py  vision_agent.py  vision_squad.py
agents/ops/: __init__.py  agent.py
agents/root/: agent.py
agents/scout/: agent.py
agents/vision/: __init__.py  agent.py
models/: __init__.py  groq_config.py
modules/: db.py  ingestion.py  llm_bridge.py  stealth_browser.py  vector_store.py
modules/scripts/: tag_elements.js
static/: index.html
static/css/: styles.css
static/js/: app.js
tools/: __init__.py  browser_tools.py  search_tools.py
